created Consult.html page
Created whole page

--- a/consult.html
+++ b/consult.html
@@ -378,20 +378,258 @@
        text-align: center;
    }
 
+   /* section6 start from here */
+
+   #section6 {
+       margin: 3% 0% 4% 0%;
+       /* border: 1px solid red; */
+   }
+   .div61 {
+       text-align: center;
+   }
+   .div62 {
+       display: grid;
+       grid-template-columns: 27% 27% 27%  ;
+       gap: 2%;
+       margin-left: 15%;
+       /* border: 1px solid red; */
+   }
+   .div621 {
+       height: 50px;
+       margin-left: 15%;
+       /* border: 1px solid red; */
+   }
+
    /* section7 start from here */
    #section7 {
-       border:1px solid red;
+       background-color: black; 
+       height: 100px;
+       /* border:1px solid red; */
    }
    .div7 {
-       width: 100%;
+       display: grid;
+       grid-template-columns: 20% 20% 20% 20%;
+       gap: 2%;
        height: 100px;
-       background-color: black;
+       margin-left: 10%;
+
+       /* border: 1px solid red; */
    }
-   .div7span {
+   .div7div {
+       height: 80px;
        color: white;
+       line-height: 5px;  
+       margin-top: 20px;
+       /* border: 1px solid red; */
+   }
+   .divp1 {
+       font-size: 20px;
+       text-align: center;
+   }
+   .divp2 {
+       font-size: 14px;
+       text-align: center;
    }
    
+   /* section8 start from here */
+   #section8 {
+       height: 450px;
+       /* border: 1px solid red; */
+   }
+   .div81 {
+       margin-left: 10%;
+       margin-bottom: 3%;
+       margin-top: 3%;
+   }
+   .div82 {
+       display: grid;
+       grid-template-columns: 31% 31% 31%;
+       grid-template-rows: 150px 150px 150px;
+       height: 320px;
+       gap: 3%;
+       margin-left: 10%;
+       margin-right: 10%;
+       border: 1px solid whitesmoke;
+       
+   }
+   .div821 {
+    /* border: 1px solid black; */
+   }
+   .p8 {
+       color: #9E9E9E;
+   }
+  
+  /* section9 start from here */
+ #section9 {
 
+ }
+ .div91 {
+      margin-left: 10%;
+      margin-top:2% ;
+      font-size: 30px;
+      /* border: 1px solid red; */
+ }
+ .div92 {
+     display: grid;
+     grid-template-columns: 30% 30% 30%;
+     height: 300px;
+     gap: 5%;
+     margin: 2% 10% 0% 10%;
+     /* border: 1px solid red; */
+ }
+ .div921 {
+     border: 1px solid red;
+ }
+ .div93 {
+     display: grid;
+     grid-template-columns: 30% 30% 30%;
+     height: 75px;
+     margin: 2% 10% 2% 10%;
+     gap: 5%;
+     font-size: 19px;
+     /* border: 1px solid red; */
+ }
+ .div931 {
+     /* border: 1px solid red; */
+
+ }
+
+ /* section10 start from here */
+
+ #section10 {
+     /* border: 1px solid red; */
+ }
+ .div101 {
+    margin: 0% 10% 0% 10%;
+    /* border: 1px solid red; */
+ }
+ .div102 {
+    display: grid;
+     grid-template-columns: 30% 30% 30%;
+     height: 190px;
+     gap: 5%;
+     margin: 0% 10% 0% 10%;
+     /* border: 1px solid red; */
+ }
+ .div1021 {
+     border: 2px solid whitesmoke;
+ }
+ .div10211 {
+    line-height: 1;
+ }
+ .img10 {
+     height: 50px;
+     width: 50px;
+     margin-left: 3%;
+     margin-top: 2%;
+ }
+ .divx {
+     width: 60%;
+     margin-left: 20%;
+     margin-top: -15%;
+     /* border: 1px solid red; */
+ }
+ .divh10 {
+     font-size: 18px;
+ }
+ .divx1 {
+     height: 110px;
+     margin-left: 3%;
+     margin-right: 4%;
+     font-size: 15px;
+     line-height: 1.5;
+     /* border: 1px solid red; */
+ }
+
+ /* section11 start from here */
+
+#section11 {
+    height: 430px;
+    /* border: 1px solid red; */
+} 
+.div112 {
+    display: grid;
+    grid-template-columns: 48% 48%;
+    gap: 4%;
+    grid-template-rows: 100px 100px 100px;
+    margin-right: 10%;
+    margin-left: 10%;
+    /* border: 1px solid red; */
+}
+.div111 {
+    margin: 0% 10% 0% 10%;
+}
+.div1121 {
+    margin-left: 3%;
+    /* border: 1px solid red; */
+}
+.b11 {
+    font-size: 20px;
+}
+.p11 {
+    margin-left: 3%;
+    color: #9E9E9E;
+}
+/* section12 start feom here */
+
+#section12 {
+    /* border: 1px solid red; */
+}
+.div121 {
+    margin-left: 10%;
+    margin-right: 10%;
+    /* border: 1px solid red; */
+}
+.div122 {
+    display: grid;
+    grid-template-columns: 30% 30% 30%;
+    margin-left: 10%;
+    margin-right: 10%;
+    gap: 5%;
+    /* border: 1px solid red; */
+}
+.divx12 {
+    height: 100px;
+    /* border: 1px solid red; */
+}
+.span12 {
+    margin-left: 80%;
+    margin-top: -5%;
+    /* border: 1px solid red; */
+}
+
+/* section13 start from here */
+
+#section13 {
+    background-color: black;
+    /* border: 1px solid red; */
+}
+.div13 {
+    display: grid;
+    grid-template-columns: 45% 45%;
+    height: 130px;
+    gap: 5%;
+    margin-left: 10%;
+    margin-right: 10%;
+    /* border: 1px solid red; */
+}
+.div131 {
+    color: white;
+    margin-left: 2%;
+    /* border: 1px solid red; */
+}
+.button13 {
+        margin-top: 40px;
+        margin-bottom: 10px;
+        margin-left: 200px;
+        padding: 14px 100px;
+        font-size: 18px;
+        font-weight: bold;
+        color: white;
+        background-color: #29B6F6;
+        border-radius: 5px;
+        border: 1px solid black;
+}
 </style>
 
 <body>
@@ -617,12 +855,201 @@
                 </div>
             </div>
         </div>
+        <div id="section6">
+            <div class="div61">
+                <h1>How it works</h1>
+            </div>
+            <div class="div62">
+                <div class="div621">
+                   <p>Select a speciality or symptom</p> 
+                </div>
+                <div class="div621">
+                    <p>Audio/ video call with a verified doctor</p>
+                </div>
+                <div class="div621">
+                    <p>Get a digital prescription & a free follow-up</p>
+                </div>
+            </div>
+        </div>
         <div id="section7">
             <div class="div7">
-                <span class="div7span"><b>2,00,000+</b>Happy Users</span>
-                <span></span>
-                <span></span>
-                <span></span>
+                <div class="div7div">
+                    <p class="divp1">2,00,000+</p>
+                    <p class="divp2">Happy Users</p>
+                </div>
+                <div class="div7div">
+                    <p class="divp1">20,000+</p>
+                    <p class="divp2">Verified Doctors</p></div>
+                <div class="div7div">
+                    
+                    <p class="divp1">25+</p>
+                    <p class="divp2">Specialities</p>
+                </div>
+                <div class="div7div">
+                    <p class="divp1">4.5/5</p>
+                    <p class="divp2">App Rating</p></div>
+            </div>
+        </div>
+        <div id="section8">
+            <div class="div81">
+                <h1>Benefits of Online Consultation</h1>
+            </div>
+            <div class="div82">
+                <div class="div821">
+                    <h3>Consult Top Doctors 24x7</h3>
+                    <p class="p8">Connect instantly with a 24x7 specialist or choose to video visit a particular doctor.</p>
+                </div>
+                <div class="div821">
+                    <h3>Convenient and Easy</h3>
+                    <p class="p8">Start an instant consultation within 2 minutes or do video consultation at the scheduled time.</p>
+                </div>
+                <div class="div821">
+                    <h3>100% Safe Consultations</h3>
+                    <p class="p8">Be assured that your online consultation will be fully private and secured.</p>
+                </div>
+                <div class="div821">
+                    <h3>Similar Clinic Experience</h3>
+                    <p class="p8">Experience clinic-like consultation through a video call with the doctor. Video consultation is available only on the Practo app.</p>
+                </div>
+                <div class="div821">
+                    <h3>Free Follow-up</h3>
+                    <p class="p8">Get a valid digital prescription and a 7-day, free follow-up for further clarifications.</p>
+                </div>
+                <div class="div821"></div>
+            </div>
+        </div>
+        <div id="section9">
+            <div class="div91">
+               <b>Experience online doctor consultations</b>
+            </div>
+            <div class="div92">
+                <div class="div921"></div>
+                <div class="div921"></div>
+                <div class="div921"></div>
+            </div>
+            <div class="div93">
+                <div class="div931"><b>#HelloDoctor Consult a doctor online from home</b></div>
+                <div class="div931"><b>#HelloDoctor Consult a doctor online from home</b> </div>
+                <div class="div931"> <b>Video Consult with Top Doctors Online</b> </div>
+            </div>
+        </div>
+        <div id="section10">
+            <div class="div101">
+                <h2>What our users say about their online consultation experience</h2>
+            </div>
+            <div class="div102">
+                <div class="div1021">
+                    <div class="div10211">
+                        <div><img class="img10" src="https://www.practo.com/consult/static/images/testimonial-abhy-v1.png" alt="">
+                        </div>
+                        <div class="divx">
+                            <b class="divh10">Abhy</b>
+                            <p class="divp10">33 yr old IT professional</p>
+                        </div>
+                        <div class="divx1">
+                            I was really sick and <b> couldn't get of bed</b>. I Talked to the doctor through Practo and
+                            he shared a <b> prescription in 10 minutes</b>. I even got the <b> medicines delivered on the same day</b>
+                            through Practo, just a WOW experience
+
+                        </div>
+                    </div>
+                </div>
+                <div class="div1021">
+                    <div class="div10211">
+                        <div><img class="img10" src="https://www.practo.com/consult/static/images/testimonial-default-women-v1.png" alt="">
+                        </div>
+                        <div class="divx">
+                            <b class="divh10">Preeti</b>
+                            <p class="divp10">26 yr old IT professional</p>
+                        </div>
+                        <div class="divx1">
+                            I was really sick and <b> couldn't get of bed</b>. I Talked to the doctor through Practo and
+                            he shared a <b> prescription in 10 minutes</b>. I even got the <b> medicines delivered on the same day</b>
+                            through Practo, just a WOW experience
+
+                        </div>
+                    </div>
+                </div>
+                <div class="div1021">
+                    <div class="div10211">
+                        <div><img class="img10" src="https://www.practo.com/consult/static/images/testimonial-deepak-v1.png" alt="">
+                        </div>
+                        <div class="divx">
+                            <b class="divh10">Deepak</b>
+                            <p class="divp10">29 yr old traveler</p>
+                        </div>
+                        <div class="divx1">
+                            I was really sick and <b> couldn't get of bed</b>. I Talked to the doctor through Practo and
+                            he shared a <b> prescription in 10 minutes</b>. I even got the <b> medicines delivered on the same day</b>
+                            through Practo, just a WOW experience
+
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div id="section11">
+            <div class="div111">
+                <h1>FAQs</h1>
+            </div>
+            <div class="div112">
+                <div class="div1121">
+                   <b class="b11"> What is online doctor consultation?</b>
+                   <p class="p11">Online doctor consultation or online medical consultation is a method .... Read More</p>
+                </div>
+                <div class="div1121">
+                   <b class="b11"> WHow do I start online consultation with doctors on Practo?</b>
+                   <p class="p11">Online doctor consultation or online medical consultation is a method.doctor consultation or online medical consultation is a method  .... Read More</p>
+                </div>
+                <div class="div1121">
+                    <b class="b11">Are your online doctors qualified?</b>
+                   <p class="p11">Online doctor consultation or online medical consultation is a method.doctor consultation or online medical consultation is a method  .... Read More</p>
+                </div>
+                <div class="div1121">
+                    <b class="b11">Is online doctor consultation safe and secured on Practo?</b>
+                   <p class="p11">Online doctor consultation or online medical consultation is a method .... Read More</p>
+                </div>
+                <div class="div1121">
+                    <b class="b11">What happens if I don’t get a response from a doctor?</b>
+                   <p class="p11">Online doctor consultation or online medical consultation is a method.doctor consultation or online medical consultation is a method  .... Read More</p>
+                </div>
+                <div class="div1121">
+                    <b class="b11">Can I do a free online doctor consultation on Practo?</b>
+                   <p class="p11">Online doctor consultation or online medical consultation is a method .... Read More</p>
+                </div>
+            </div>
+        </div>
+        <div id="section12">
+            <div class="div121">
+                <h1>Health Queries</h1>
+            </div>
+            <div class="div122">
+                <div class="divx12">
+                    <span><b> Personal health</b></span>
+                    <div class="span12">11 Views </div>
+                    <p>Hello doctor , It's personal health concern. Me and my wife is sexually active... Read more</p>
+                </div>
+                <div class="divx12">
+                    <span><b>About covid vaccine</b></span>
+                    <div class="span12">319 Views </div>
+                    <p>Hello doctor , It's personal health concern. Me and my wife is sexually active... Read more</p>
+                </div>
+                <div class="divx12">
+                    <span><b>Heavy dandruff on head with a patch</b></span>
+                    <div class="span12">10 Views </div>
+                    <p>Hello doctor , It's personal health concern. Me and my wife is sexually active... Read more</p>
+                </div>
+            </div>
+        </div>
+        <div id="section13">
+            <div class="div13">
+                <div class="div131">
+                    <h2>Still delaying your health concerns ?</h2>
+                    <p>Connect with India's top doctors online</p>
+                </div>
+                <div class="div131">
+                    <button class="button13">Consult Now</button>
+                </div>
             </div>
         </div>
     </div>
